.provarCaches/00D410000011HE0EAM/objects/rstk__icdmdpickloc__c.object
<CustomObject>
    <description>icdmdpickloc__c</description>
    <fields>
        <fullName>Location_ID__c</fullName>
        <formula>IF(
NOT(ISBLANK(rstk__icdmdpickloc_locid__r.rstk__sylocid_locid__c)),  rstk__icdmdpickloc_locid__r.rstk__sylocid_locid__c , &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Number__c</fullName>
        <formula>IF(
NOT(ISBLANK(rstk__icdmdpickloc_locnum__c)) , rstk__icdmdpickloc_locnum__c, &apos;N/A&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>NULL</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__icdmdpickloc_ordno__c + &apos;_&apos; + rstk__icdmdpickloc_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Name Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_searchindex__c</fullName>
        <formula>Name</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Search Index</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_allocpol__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Allocation Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_backflushpol__c</fullName>
        <label>Backflush Ind</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>First Operation</fullName>
                </value>
                <value>
                    <fullName>Last Operation</fullName>
                </value>
                <value>
                    <fullName>No Backflushing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_bgcolor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>icdmdpickloc_bgcolor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_compitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Component Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_descr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Description</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_div__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>divicdmdpicklocs</relationshipLabel>
        <relationshipName>divicdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_dmdqtyoutstdg__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Outstanding</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_dtereqd__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Date Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_expiredate__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_fsopickh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>SO Pick List Header</label>
        <referenceTo>rstk__fsopickh__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_ictransreq__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Planned Location Transfer</label>
        <referenceTo>rstk__ictransreq__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>icdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_ictransreqh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Planned Transfer Group</label>
        <referenceTo>rstk__ictransreqh__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>icdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_issued__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issue Txn Processed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_itemrev__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Item Rev</label>
        <referenceTo>rstk__peitemrev__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_locnum__c</fullName>
        <inlineHelpText>The Location Number is a more granular definition of specific areas WITHIN a Location ID. Normally this would identify a specific Bin or Aisle/Rack/Shelf/Bin type of warehouse identification.</inlineHelpText>
        <label>Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_locqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Loc Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_locsec__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot/Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_loctype__c</fullName>
        <label>Location Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consigned</fullName>
                </value>
                <value>
                    <fullName>Non-nettable</fullName>
                </value>
                <value>
                    <fullName>On Hand</fullName>
                </value>
                <value>
                    <fullName>Outside Operation</fullName>
                </value>
                <value>
                    <fullName>Vendor Managed Inventory</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_lotno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Lot Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_name_del__c</fullName>
        <formula>rstk__icdmdpickloc_ordno__c + &apos;_&apos; + rstk__icdmdpickloc_compitem__r.rstk__icitem_item__r.rstk__peitem_item__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>icdmdpickloc_name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_notes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Rich Text Notes</label>
        <length>32000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_oper__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation No</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_oper_ui__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Operation</label>
        <referenceTo>rstk__woordop__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_orddmdlne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Dmd Line</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_ordlne__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ord Line</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_ordlnerel__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Ord Line Release</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_ordno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_ordtype__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Order Type</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_pickseq__c</fullName>
        <defaultValue>999999</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pick Sequence</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_plainnotes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>icdmdpickloc_plainnotes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_podmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>When picklist is for PO Components to be picked, this is the PO Component Demand this picklist record applies to.</inlineHelpText>
        <label>PO Component Demand</label>
        <referenceTo>rstk__podmd__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>Pick_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_pohdr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>PO Entry</label>
        <referenceTo>rstk__pohdr__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>icdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_procqty__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Processed Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Issuing Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_qtyalloc__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Qty Allocated</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_refdes__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Reference Designators</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_seqno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Seq Number</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_serials__c</fullName>
        <label>Serial Numbers</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_soorddmd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Sales Order Demand</label>
        <referenceTo>rstk__soorddmd__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>icdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_sopickh__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pick List Batch</label>
        <referenceTo>rstk__sopickh__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>icdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_srlno__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_suggestedqty__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Suggested Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_totqtypickreqd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Pick Qty</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_wbs__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Job Code</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_wctr__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Center</label>
        <referenceTo>rstk__rtwctr__c</referenceTo>
        <relationshipLabel>Pick List</relationshipLabel>
        <relationshipName>Pick_List</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__icdmdpickloc_wocst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Work Order</label>
        <referenceTo>rstk__wocst__c</referenceTo>
        <relationshipLabel>Pick Lists</relationshipLabel>
        <relationshipName>icdmdpicklocs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Pick List</label>
    <listViews>
        <fullName>Pick_Lists_PK</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdmdpickloc_ordno__c</columns>
        <columns>rstk__icdmdpickloc_ordlnerel__c</columns>
        <columns>rstk__icdmdpickloc_compitem__c</columns>
        <columns>Location_ID__c</columns>
        <columns>Location_Number__c</columns>
        <columns>rstk__icdmdpickloc_locid__c</columns>
        <columns>rstk__icdmdpickloc_locnum__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icdmdpickloc_locqty__c</columns>
        <columns>rstk__icdmdpickloc_locsec__c</columns>
        <columns>rstk__icdmdpickloc_lotno__c</columns>
        <columns>rstk__icdmdpickloc_wocst__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>rstk__icdmdpickloc_wocst__c</field>
            <operation>contains</operation>
            <value>PK_WO_AUG10-1</value>
        </filters>
        <label>Pick Lists_PK</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__All</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdmdpickloc_ordno__c</columns>
        <columns>rstk__icdmdpickloc_ordlnerel__c</columns>
        <columns>rstk__icdmdpickloc_compitem__c</columns>
        <columns>Location_ID__c</columns>
        <columns>Location_Number__c</columns>
        <columns>rstk__icdmdpickloc_totqtypickreqd__c</columns>
        <columns>rstk__icdmdpickloc_qtyalloc__c</columns>
        <columns>rstk__icdmdpickloc_soorddmd__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Pick Lists</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>rstk__Details</fullName>
        <columns>NAME</columns>
        <columns>rstk__icdmdpickloc_div__c</columns>
        <columns>rstk__icdmdpickloc_proj__c</columns>
        <columns>rstk__icdmdpickloc_loctype__c</columns>
        <columns>rstk__icdmdpickloc_locid__c</columns>
        <columns>rstk__icdmdpickloc_locnum__c</columns>
        <columns>rstk__icdmdpickloc_ordno__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>rstk__icdmdpickloc_ordlne__c</columns>
        <columns>rstk__icdmdpickloc_totqtypickreqd__c</columns>
        <columns>rstk__icdmdpickloc_soorddmd__c</columns>
        <filterScope>Everything</filterScope>
        <label>Details</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pick Lists</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>